# BACKEND-SERVER

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
backend_server/: config.py  database.py  database_scripts.py  main.py  migrate_db.py
backend_server/api/: __init__.py  item.py  scent.py  server_info.py  user_scent.py
backend_server/models/: item.py  scent.py  user_scent_meta.py
backend_server/schemas/: item.py  scent.py  user_scent.py
backend_server/service/: mds.py  scent.py  websocket.py
scripts/: insert_item_via_api.py  migrate_db.sh  rebuild-docker.sh
