[tool.poetry]
name = "backend-server"
version = "0.1.0"
description = ""
authors = ["Kuroi_Cc <chenchengmikuro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.26"
pymysql = "^1.1.0"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
cryptography = "^42.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
