[tool.poetry]
name = "backend-server"
version = "0.1.0"
description = ""
authors = ["Kuroi_Cc <chenchengmikuro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.26"
pymysql = "^1.1.0"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
cryptography = "^42.0.2"
websockets = "^12.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
